--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -4,54 +4,49 @@
     <meta charset="UTF-8">
     <title>Update User</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<div class="form-container">
-    <form th:method="POST" th:action="@{/admin/user(id=${user.getId()})}" th:object="${user}">
-        <table class="form-table">
-            <tr>
-                <td><label for="username">Username:</label></td>
-                <td><input type="text" id="username" th:field="*{username}"></td>
-            </tr>
-            <tr>
-                <td><label for="password">Password:</label></td>
-                <td><input type="password" id="password" th:field="*{password}"></td>
-            </tr>
-            <tr>
-                <td><label for="name">Name:</label></td>
-                <td><input type="text" id="name" th:field="*{name}"></td>
-            </tr>
-            <tr>
-                <td><label for="surname">Surname:</label></td>
-                <td><input type="text" id="surname" th:field="*{surname}"></td>
-            </tr>
-            <tr>
-                <td><label for="age">Age:</label></td>
-                <td><input type="text" id="age" th:field="*{age}"></td>
-            </tr>
-            <tr>
-                <td><label for="email">Email:</label></td>
-                <td><input type="text" id="email" th:field="*{email}"></td>
-            </tr>
-            <tr>
-                <td><label>Roles:</label></td>
-                <td>
-                    <div th:each="role : ${user.getRoles()}">
-                        <input type="checkbox" name="roles"
-                               th:text="${role.getRole()}"
-                               th:value="${role.getId()}"
-                               th:field="*{roles}">
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <input type="submit" value="Update" class="button">
-                </td>
-            </tr>
-        </table>
-    </form>
+<div class="container">
+    <div class="form-container">
+        <form th:method="POST" th:action="@{/admin/user(id=${user.getId()})}" th:object="${user}">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" th:field="*{username}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" th:field="*{password}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" th:field="*{name}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="surname">Surname:</label>
+                <input type="text" id="surname" th:field="*{surname}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="age">Age:</label>
+                <input type="text" id="age" th:field="*{age}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="text" id="email" th:field="*{email}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label>Roles:</label>
+                <div th:each="role : ${user.getRoles()}" class="form-check">
+                    <input type="checkbox" name="roles" th:text="${role.getRole()}" th:value="${role.getId()}" th:field="*{roles}" class="form-check-input">
+                    <label th:for="${role.getId()}" class="form-check-label" th:text="${role.getRole()}"></label>
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Update</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 </body>
