--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -4,78 +4,56 @@
     <meta charset="UTF-8">
     <title>New User</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .form-container {
             width: 50%;
             margin: auto;
             margin-top: 50px;
         }
-        .form-table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .form-table td {
-            padding: 10px;
-        }
-        .form-table label {
-            font-weight: bold;
-        }
-        .form-table input[type="text"],
-        .form-table input[type="password"] {
-            width: calc(100% - 20px);
-            padding: 5px;
-        }
-        .form-table .button {
-            padding: 10px;
-            width: 100%;
-        }
     </style>
 </head>
 <body>
 
-<div class="form-container">
-    <form th:method="POST" th:action="@{/admin}" th:object="${user}">
-        <table class="form-table">
-            <tr>
-                <td><label for="username">Username:</label></td>
-                <td><input type="text" id="username" th:field="*{username}"></td>
-            </tr>
-            <tr>
-                <td><label for="password">Password:</label></td>
-                <td><input type="password" id="password" th:field="*{password}"></td>
-            </tr>
-            <tr>
-                <td><label for="name">Name:</label></td>
-                <td><input type="text" id="name" th:field="*{name}"></td>
-            </tr>
-            <tr>
-                <td><label for="surname">Surname:</label></td>
-                <td><input type="text" id="surname" th:field="*{surname}"></td>
-            </tr>
-            <tr>
-                <td><label for="age">Age:</label></td>
-                <td><input type="text" id="age" th:field="*{age}"></td>
-            </tr>
-            <tr>
-                <td><label for="email">Email:</label></td>
-                <td><input type="text" id="email" th:field="*{email}"></td>
-            </tr>
-            <tr>
-                <td><label>Roles:</label></td>
-                <td>
-                    <div th:each="role : ${user.roles}">
-                        <input type="checkbox" th:field="*{roles}" th:value="${role.id}"/>
-                        <span th:text="${role.role}"></span>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <input type="submit" value="Save" class="button">
-                </td>
-            </tr>
-        </table>
-    </form>
+<div class="container">
+    <div class="form-container">
+        <form th:method="POST" th:action="@{/admin}" th:object="${user}">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" th:field="*{username}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" th:field="*{password}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" th:field="*{name}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="surname">Surname:</label>
+                <input type="text" id="surname" th:field="*{surname}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="age">Age:</label>
+                <input type="text" id="age" th:field="*{age}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="text" id="email" th:field="*{email}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label>Roles:</label>
+                <div th:each="role : ${user.roles}" class="form-check">
+                    <input type="checkbox" th:field="*{roles}" th:value="${role.id}" class="form-check-input">
+                    <label th:for="${role.id}" class="form-check-label" th:text="${role.role}"></label>
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 </body>
