--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>All Users</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<div>
-    <table class="user-table">
+<div class="container">
+    <table class="table user-table">
         <thead>
         <tr>
             <th>ID</th>
@@ -21,16 +22,16 @@
             <td th:text="${user.getId()}"></td>
             <td th:text="${user.getUsername()}"></td>
             <td>
-                <a th:href="@{/admin/user(id=${user.getId()})}" class="button">View</a>
+                <a th:href="@{/admin/user(id=${user.getId()})}" class="btn btn-primary">View</a>
             </td>
         </tr>
         </tbody>
     </table>
+    <div class="text-center">
+        <a th:href="@{/admin/new}" class="btn btn-success">Add user</a>
+        <a th:href="@{/logout}" class="btn btn-danger">Logout</a>
+    </div>
 </div>
-<br/>
-<a th:href="@{/admin/new}" class="button">Add user</a>
-<br/><br/><br/>
-<a th:href="@{/logout}" class="button">Logout</a>
 
 </body>
 </html>
